--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <div class="hero">
-        <img src="radhe.jpg" alt="Radhe Electrician">
+        <img <img src="radhe.JPG" alt="Radhe Electrician" class="photo">
     </div>
 
     <div class="container">
