Fix img tag syntax in index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <div class="hero">
-        <img <img src="radhe.JPG" alt="Radhe Electrician" class="photo">
+        <img src="radhe.JPG" alt="Radhe Electrician" />
     </div>
 
     <div class="container">
