--- a/index.html
+++ b/index.html
@@ -1,104 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Radhe Electrician - Palanpur</title>
-
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f5f5f5;
-            color: #333;
-        }
-        header {
-            background: #111;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .hero {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .hero img {
-            width: 90%;
-            max-width: 350px;
-            border-radius: 15px;
-            box-shadow: 0 0 10px #0005;
-        }
-        .container {
-            width: 90%;
-            margin: auto;
-            padding: 20px;
-            background: white;
-            margin-top: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px #0003;
-        }
-        h1, h2 {
-            text-align: center;
-        }
-        .services p {
-            font-size: 18px;
-            margin: 8px 0;
-        }
-        .contact-box {
-            background: #eee;
-            padding: 15px;
-            border-radius: 10px;
-        }
-        .contact-item {
-            font-size: 18px;
-            margin: 8px 0;
-        }
-        .footer {
-            text-align: center;
-            margin-top: 30px;
-            padding: 20px;
-            background: #111;
-            color: white;
-            font-size: 14px;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Radhe Electrician – Palanpur</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <header>
-        <h1>⚡ Radhe Electrician – Palanpur</h1>
-        <p>Reliable • Fast • Professional Electrical Service</p>
-    </header>
+<header>
+    <h1>⚡ Radhe Electrician – Palanpur</h1>
+    <p>Reliable • Fast • Professional Electrical Service</p>
+</header>
 
-    <div class="hero">
-        <img src="radhe.JPG" alt="Radhe Electrician" />
+<section class="hero">
+    <h2>Radhe Electrician – Palanpur</h2>
+    <img src="photo1.png" alt="Electrician Work">
+</section>
+
+<section class="services">
+    <h2>Our Services</h2>
+
+    <div class="service-box">
+        <h3>House Wiring</h3>
     </div>
 
-    <div class="container">
-        <h2>Our Services</h2>
-        <div class="services">
-            <p>• House Wiring</p>
-            <p>• Appliance Installation</p>
-            <p>• Industrial Wiring</p>
-            <p>• CCTV Installation</p>
-            <p>• Electric Repair</p>
-            <p>• Emergency Service (24/7)</p>
-        </div>
-
-        <hr />
-
-        <h2>Contact Us</h2>
-        <div class="contact-box">
-            <p class="contact-item">📞 Vijay Purohit – 91049 06895</p>
-            <p class="contact-item">📞 Mukesh Purohit – 84019 31733</p>
-            <p class="contact-item">📞 Ajay Prajapati – 83478 49901</p>
-        </div>
+    <div class="service-box">
+        <h3>POP Wiring</h3>
     </div>
 
-    <div class="footer">
-        © 2025 Radhe Electrician – Palanpur
+    <div class="service-box">
+        <h3>AC & Washing Machine Service</h3>
     </div>
+
+    <div class="service-box">
+        <h3>Electric & Gas Geyser Repair</h3>
+    </div>
+</section>
+
+<section class="contact">
+    <h2>Contact Us</h2>
+    <p><strong>Palanpur — Gathaman Road, 385001</strong></p>
+
+    <p>📞 Vijay Purohit – 91049 06895</p>
+    <p>📞 Mukesh Purohit – 84019 31733</p>
+    <p>📞 Ajay Prajapati – 83478 49901</p>
+
+    <p>📧 Mukeshpurohit952@gmail.com</p>
+</section>
+
+<script src="script.js"></script>
 
 </body>
 </html>
