--- a/index.html
+++ b/index.html
@@ -1,55 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radhe Electrician – Palanpur</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Radhe Electrician — Palanpur</title>
+
+  <link rel="stylesheet" href="style.css">
+  <!-- three.js CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/controls/OrbitControls.min.js"></script>
+
 </head>
 <body>
-
-<header>
-    <h1>⚡ Radhe Electrician – Palanpur</h1>
-    <p>Reliable • Fast • Professional Electrical Service</p>
-</header>
-
-<section class="hero">
-    <h2>Radhe Electrician – Palanpur</h2>
-    <img src="photo1.png" alt="Electrician Work">
-</section>
-
-<section class="services">
-    <h2>Our Services</h2>
-
-    <div class="service-box">
-        <h3>House Wiring</h3>
+  <header>
+    <div class="brand">
+      <span class="bolt">⚡</span>
+      <h1>Radhe Electrician — Palanpur</h1>
+      <p>Reliable • Fast • Professional Electrical Service</p>
     </div>
+  </header>
 
-    <div class="service-box">
-        <h3>POP Wiring</h3>
-    </div>
+  <main>
+    <!-- 3D canvas hero -->
+    <section id="hero">
+      <div id="three-container"></div>
+      <div class="hero-overlay">
+        <h2>Professional Electrician Services</h2>
+        <p>Wiring • Repair • Installation • 24/7 Emergency</p>
+        <a class="cta" href="#services">Our Services</a>
+      </div>
+    </section>
 
-    <div class="service-box">
-        <h3>AC & Washing Machine Service</h3>
-    </div>
+    <!-- Services -->
+    <section id="services">
+      <h2>Our Services</h2>
+      <ul class="service-list">
+        <li>• House Wiring</li>
+        <li>• Appliance Installation</li>
+        <li>• Industrial Wiring</li>
+        <li>• CCTV Installation</li>
+        <li>• Geyser / AC Repair</li>
+      </ul>
+    </section>
 
-    <div class="service-box">
-        <h3>Electric & Gas Geyser Repair</h3>
-    </div>
-</section>
+    <!-- Toolbox animated area (CSS/3D combined) -->
+    <section id="toolbox">
+      <div class="card">
+        <h3>Toolbox Showcase</h3>
+        <div class="tools">
+          <div class="tool">🔧</div>
+          <div class="tool">🔩</div>
+          <div class="tool">🔌</div>
+          <div class="tool">🪛</div>
+        </div>
+        <p>Fast, reliable, and affordable service.</p>
+      </div>
+    </section>
 
-<section class="contact">
-    <h2>Contact Us</h2>
-    <p><strong>Palanpur — Gathaman Road, 385001</strong></p>
+    <!-- Contact -->
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <p class="address">Palanpur — Gathaman Road, 385001</p>
+      <div class="contacts">
+        <p>📞 Vijay Purohit — <a href="tel:9104906895">91049 06895</a></p>
+        <p>📞 Mukesh Purohit — <a href="tel:8401931733">84019 31733</a></p>
+        <p>📞 Ajay Prajapati — <a href="tel:8347849901">83478 49901</a></p>
+        <p>✉️ <a href="mailto:Mukeshpurohit952@gmail.com">Mukeshpurohit952@gmail.com</a></p>
+      </div>
+    </section>
+  </main>
 
-    <p>📞 Vijay Purohit – 91049 06895</p>
-    <p>📞 Mukesh Purohit – 84019 31733</p>
-    <p>📞 Ajay Prajapati – 83478 49901</p>
+  <footer>
+    © 2025 Radhe Electrician — Palanpur
+  </footer>
 
-    <p>📧 Mukeshpurohit952@gmail.com</p>
-</section>
-
-<script src="script.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
